--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "url": "git://github.com/juliangruber/url-to-screenshot.git"
   },
   "scripts": {
-    "test": "tape test.js"
+    "test": "tape test.js && npm run lint",
+    "lint": "semistandard"
   },
   "homepage": "https://github.com/juliangruber/url-to-screenshot",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "semistandard": "^8.0.0",
     "tape": "~4.5.0"
   },
   "keywords": [
